init new layout

--- a/locales/br.yml
+++ b/locales/br.yml
@@ -4,7 +4,9 @@ br:
   front_dev: desenvolvedor front-end
   experiments: Experimentos
   about_me: Sobre mim
-  blog: Meu blog
+  blog: Blog
+  writing: Escrevendo
+  read_more: Leia mais
   about: Sobre
   en: Inglês
   br: Português
