--- a/locales/en.yml
+++ b/locales/en.yml
@@ -4,8 +4,10 @@ en:
   front_dev: front-end developer
   experiments: Experiments
   about_me: About me
-  blog: My blog
+  blog: Blog
+  writing: Writing
   about: About
+  read_more: Read more
   en: English
   br: Portuguese
   paths:
