--- a/locales/br.yml
+++ b/locales/br.yml
@@ -1,12 +1,15 @@
 br:
+  lang: pt-br
   hello_iam: Olá, eu sou
   like_coffee: e gosto muito de café
   front_dev: desenvolvedor front-end
   experiments: Experimentos
   about_me: Sobre mim
   blog: Blog
-  writing: Escrevendo
-  read_more: Leia mais
+  writing: Blog
+  prev_page: Página anterior
+  next_page: Próxima página
+  read_more: Ler artigo completo
   about: Sobre
   en: Inglês
   br: Português
