--- a/src/content/posts/2017-01-01-Retro-2016Planing-2017.md
+++ b/src/content/posts/2017-01-01-Retro-2016Planing-2017.md
@@ -1,9 +1,10 @@
 ---
-title: Retro 2016 Planing 2017
+title: Retro 2016 Planing 2017 </2016> <2017>
 date: 2017-01-01
+description: 2016 não foi um ano ruim, tanto na minha vida profissional quando na minha vida pessoal, confesso que tive alguns obstáculos, mas todos foram ultrapassados com sucesso.
 ---
 
-## Retro 2016
+## Retrospectiva 2016
 
 2016 não foi um ano ruim, tanto na minha vida profissional quando na minha vida pessoal, confesso que tive alguns obstáculos, mas todos foram ultrapassados com sucesso.
 
