--- a/src/content/projects/2014-10-01-Abracce.md
+++ b/src/content/projects/2014-10-01-Abracce.md
@@ -3,7 +3,7 @@ name: Voluntáriado - Site da ONG Abracce.org.br
 date: 2014-10-01
 thumbnail: /images/projects/abracce.png
 url: https://www.abracce.org.br
-description: Ut est sint aliquam temporibus non. Est esse nisi ut molestiae deleniti voluptas. Ipsa vero culpa veritatis sunt praesentium. Neque ad consectetur nisi.
+description: ---
 tags:
 - Voluntáriado
 - WordPress
