Add more projects and separate open sources projects

--- a/content/open-source/2017-04-09-PhpprOrg.md
+++ b/content/open-source/2017-04-09-PhpprOrg.md
@@ -1,7 +1,8 @@
 ---
 name: Portal da comunidade PHPPR
 date: 2017-04-09
-thumbnail: /images/projects/phppr.png
+online: true
+thumbnail: /images/projects/open-source/phppr.png
 url: https://github.com/phppr/theme-phppr.org
 description: Design e desenvolvimento do tema WordPress para Portal do Grupo de Desenvolvedores PHP do Paraná.
 tags:
