--- a/content/projects/2014-10-01-Abracce.md
+++ b/content/projects/2014-10-01-Abracce.md
@@ -1,12 +1,14 @@
 ---
-name: Voluntáriado - Site da ONG Abracce.org.br
+name: Site da ONG Abracce.org.br
 date: 2014-10-01
+online: true
 thumbnail: /images/projects/abracce.png
 url: https://www.abracce.org.br
-description: ---
+description: Website Institucional da ONG Abracce, desenvolvido como voluntário, desenhado no Photoshop e desenvolvido com o CMS WordPress.
 tags:
 - Voluntáriado
 - WordPress
 - Photoshop
+- Institucional
 - Responsive
 ---
