--- a/content/projects/2017-10-28-grgit.md
+++ b/content/projects/2017-10-28-grgit.md
@@ -1,6 +1,7 @@
 ---
-name: GRGIT - Recursos Humanos (em breve)
+name: GRGIT - Recursos Humanos
 date: 2017-10-28
+online: false
 thumbnail: /images/projects/grgit.com.br.png
 url: '#'
 description: -- (em breve) --
