--- a/content/open-source/2016-04-12-GuruPr.md
+++ b/content/open-source/2016-04-12-GuruPr.md
@@ -1,7 +1,8 @@
 ---
 name: Novo front-end do site da comunidade GuruPR
 date: 2016-04-12
-thumbnail: /images/projects/gurupr.png
+online: true
+thumbnail: /images/projects/open-source/gurupr.png
 url: https://github.com/guru-pr/gurupr
 description: Novo design e desenvolvimento front-end do site do Grupo de Usuários Ruby do Paraná.
 tags:
