Add mental spark, CTA for Whatapp and project Wordpress.curitiba.br

--- a/content/mental-spark/01.md
+++ b/content/mental-spark/01.md
@@ -1,3 +1,20 @@
 ---
 title: "Faísca Mental #01"
+description: "Uf, até que enfim a primeira #FaíscaMental saiu hein!.. Um pouco atrasada mas com algumas indicações bem bacanas de livros e apps, chega mais!"
 ---
+
+Uf, até que enfim a primeira **#FaíscaMental** saiu hein!..  Um pouco atrasada mas com algumas indicações bem bacanas de livros e apps, chega mais!
+
+1. **Segunda:** Em minha primeira faísca mental eu gostaria de indicar um livro chamado *[Fúria (Rage) de Stephen King](https://pt.wikipedia.org/wiki/Rage_(livro))*. O livro conta a história de um aluno que, armado, torna reféns professores e colegas, e que tem um passado um pouco conturbado com a relação que tem com seu pai e sua mãe. É um livro muito bom e raro de encontrar mas se conseguir leia, vale o tempo.
+
+2. **Terça:** Ao finalizar a leitura do livro *Fúria (Rage)* eu comecei a ler *[23 Hábitos Anti-Procrastinação: Como Deixar de Ser Preguiçoso e Ter Resultados Em Sua Vida](https://www.amazon.com.br/23-H%C3%A1bitos-Anti-Procrastina%C3%A7%C3%A3o-Pregui%C3%A7oso-Resultados-ebook/dp/B00QKZ8CZE)* e logo no primeiro capítulo já conclui que sou um procrastinador por não gostar muito de rotina. De uns tempos pra cá eu estou mudando isso, determinando horários específicos para cada tarefa dentro do meu dia, e, por incrível que pareça, isso está me ajudando muito. Outra indicação de livro, eu nem terminei ainda e já estou indicando. hehehe!
+
+3. **Quarta:** Eu estava em uma constante busca por um bloco de anotações perfeito, que eu pudesse fazer as minhas anotações rápidas e escrever meus artigos. Já usei o **Google Keep**, **Evernote**, **Apple Notes**, e outros mas nenhum passou no meu teste de *chatice*, até que minha busca terminou quando encontrei o [Bear](http://www.bear-writer.com/), cara, amei logo de cara! Ele une as funcionalidades de um editor padrão com Markdown!
+
+4. **Quinta:** Um app que está me ajudando muito a manter minha rotina diária é o [Next Meeting](https://itunes.apple.com/us/app/next-meeting/id1017470484?mt=12), ele conecta aos meus calendários e me mostra qual o horário da próxima atividade na barra do meu MacOS.
+
+5. **Sexta:** Uma das formas que utilizo para me manter atualizado sobre o mundo Design e Web é usando a extensão do chrome chamada [Muzli](https://muz.li/), com ele eu me mantenho atualizado sobre coisas novas que saem no [Codepen](https://codepen.io), no [Designmodo](https://designmodo.com/), no [Codyhouse](https://codyhouse.co/) e outros sites legais.
+
+6. **Sábado:** Outra forma que também uso para me atualizar no mundo do desenvolvimento é assinando a newsletter da [codrops](https://tympanus.net/codrops/), eles tem o [Collective](https://tympanus.net/codrops/collective/), que apresenta as últimas notícias e resources (de forma bem divertida) da comunidade de design e desenvolvimento web. Inclusive nesse sábado (11/11) saiu o [Collective #365](https://tympanus.net/codrops/collective/collective-365/)
+
+7. **Domingo:** Na busca de melhorar minha rotina e adquirir hábitos melhores pra minha vida eu encontrei o [Habitica](https://habitica.com/), ele é um app que me ajuda com tarefas diárias, corrigir hábitos e me diverte ao mesmo tempo. Eu já estou no Nível 20 Mago! 😎
