Change now page and add new project

--- a/content/projects/2017-10-28-grgit.md
+++ b/content/projects/2017-10-28-grgit.md
@@ -3,7 +3,7 @@ name: GRGIT - Recursos Humanos
 date: 2017-10-28
 online: false
 thumbnail: /images/projects/grgit.com.br.png
-url: '#'
+url: 'http://www.grgit.com.br/'
 description: -- (em breve) --
 tags:
 - UX Design
