--- a/content/projects/2018-02-27-grgit.md
+++ b/content/projects/2018-02-27-grgit.md
@@ -1,10 +1,10 @@
 ---
 name: GRGIT - Recursos Humanos
-date: 2017-10-28
-online: false
+date: 2018-02-27
+online: true
 thumbnail: /images/projects/grgit.com.br.png
-url: 'http://www.grgit.com.br/'
-description: -- (em breve) --
+url: 'http://www.grgit.com.br'
+description: Site institucional feito com WordPress
 tags:
 - UX Design
 - SketchApp
